# device-controller-service-kiosk

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README_SERVICE.md  check_status.cpp  compile_flags.txt  install_boost.ps1
.cache/clangd/index/: check_status.cpp.FBE6CCF1F249D2AC.idx  command_processor.cpp.91B5F34552C94933.idx  command_processor.h.4862B79D4D1141CB.idx  device_orchestrator.cpp.AF5F627CDD9C4FFD.idx  device_orchestrator.h.BD528993D9CFAF76.idx  icamera.cpp.31AB7E6AA1197391.idx  icamera.h.B8167B670CBE08D2.idx  ipayment_terminal.cpp.25B2047A1A1088FE.idx  ipayment_terminal.h.96D20F058F7BCF4A.idx  iprinter.cpp.A4E469B8D1606773.idx  iprinter.h.3FB7B18883FBF650.idx  logger.cpp.DC393A2AF5F4834E.idx  logger.h.DC6F1B2CA68267D3.idx  message_types.h.87C13FE0F30B8C61.idx  named_pipe_server.cpp.E1EF5D714826047A.idx  named_pipe_server.h.CDA3AD41153F834F.idx  recovery_manager.cpp.D321320A26CE91FC.idx  recovery_manager.h.0762FE7C349CEA93.idx  serial_port.cpp.2A0CDCABCF94365A.idx  serial_port.h.D43824EA19C30BF9.idx  service_core.cpp.C5F556A9CB7C3389.idx  service_core.h.EB5AFC7734672D5C.idx  service_main.cpp.AC8014BE017AD0FD.idx  smartro_comm.cpp.A9815EBF0D995090.idx  smartro_comm.h.31975024836C1BE9.idx  smartro_payment_terminal.cpp.A8EB933C02E2CBCA.idx  smartro_payment_terminal.h.96DF0F741F5D9D9B.idx  smartro_protocol.cpp.0D0EF93C1257CC6E.idx  smartro_protocol.h.4ACFB0A3F8538E32.idx  test_card_uid_read.cpp.3D92F27663BAEF3D.idx  test_device_check.cpp.0588A10AD733B5C1.idx  test_event_wait.cpp.9B654343F2D0F3BC.idx  test_integrated.cpp.E8B638769E26FF5C.idx  test_payment_client.cpp.B23EEA63C4A5A1D5.idx  test_payment_wait.cpp.79EAD41D0DF8357E.idx  uuid_generator.cpp.36B4B9B28087DFE2.idx  uuid_generator.h.E373619D85C62B9A.idx
.cursor/commands/: playbook.md
.cursor/rules/: 00_common_constitution.mdc  20_service_scope.mdc  21_service_layering_rules.mdc  22_service_ipc_rules.mdc  23_service_recovery_rules.mdc  24_service_device_interfaces_rules.mdc  25_service_testing_rules.mdc  90_output_format.mdc
docs/: BOOST_INSTALLATION.md  DEPLOYMENT.md  QUICK_START.md  RUN_EXE_ON_KIOSK.md
docs/cursor/: DEVICE_SERVICE_PLAYBOOK.md  FLUTTER_PAYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IPC_CONTRACT.md  LV77_PROTOCOL.md  SMARTRO_PROTOCOL.md  TROUBLESHOOTING.md
docs/flutter/: FLUTTER_API_REFERENCE.md  FLUTTER_QUICK_START.md
edsdk/Header/: EDSDKTypes.h
include/common/: uuid_generator.h
include/config/: config_manager.h
include/core/: device_constants.h  device_manager.h  service_core.h
include/device_abstraction/: icamera.h  ipayment_terminal.h  iprinter.h
include/devices/: device_types.h  icamera.h  ipayment_terminal.h  iprinter.h  payment_terminal_factory.h
include/ipc/: command_processor.h  ipc_server.h  message_parser.h  message_types.h  named_pipe_server.h
include/logging/: logger.h
include/service_core/: device_orchestrator.h  recovery_manager.h
include/vendor_adapters/canon/: edsdk_camera_adapter.h  edsdk_camera_model.h  edsdk_command_processor.h  edsdk_commands.h  edsdk_event_handler.h  edsdk_forward_decls.h  edsdk_liveview_server.h  edsdk_wrapper.h
include/vendor_adapters/lv77/: lv77_bill_adapter.h  lv77_comm.h  lv77_protocol.h
include/vendor_adapters/smartro/: serial_port.h  smartro_comm.h  smartro_payment_adapter.h  smartro_payment_terminal.h  smartro_protocol.h
include/vendor_adapters/windows/: irfanview_printer_adapter.h  windows_gdi_printer_adapter.h
installer/: KioskSetup.iss  build-and-pack.ps1
src/: main.cpp
src/common/: uuid_generator.cpp
src/config/: config_manager.cpp
src/core/: device_manager.cpp  service_core.cpp  service_core_detect_hardware.cpp
src/device_abstraction/: icamera.cpp  ipayment_terminal.cpp  iprinter.cpp
src/devices/: payment_terminal_factory.cpp
src/ipc/: command_processor.cpp  ipc_server.cpp  message_parser.cpp  named_pipe_server.cpp
src/logging/: logger.cpp
src/main/: service_main.cpp
src/service_core/: device_orchestrator.cpp  recovery_manager.cpp  service_core.cpp  service_core.h
src/vendor_adapters/canon/: edsdk_camera_adapter.cpp  edsdk_camera_model.cpp  edsdk_command_processor.cpp  edsdk_commands.cpp  edsdk_event_handler.cpp  edsdk_liveview_server.cpp
src/vendor_adapters/lv77/: lv77_bill_adapter.cpp  lv77_comm.cpp
src/vendor_adapters/smartro/: serial_port.cpp  smartro_comm.cpp  smartro_payment_adapter.cpp  smartro_payment_terminal.cpp  smartro_protocol.cpp
src/vendor_adapters/windows/: irfanview_printer_adapter.cpp  windows_gdi_printer_adapter.cpp
tests/: CMakeLists.txt  test_camera_client.cpp  test_card_uid_read.cpp  test_device_check.cpp  test_edsdk_camera.cpp  test_event_wait.cpp  test_integrated.cpp  test_lv77_client.cpp  test_payment_wait.cpp  test_pipe_client.cpp  test_pipe_connection.cpp
tests/integration/: CMakeLists.txt  README.md  test_payment_client.cpp  test_payment_client.py
tests/unit/: CMakeLists.txt
