# Unit tests
# TODO: Add test files as they are created

# Example test structure:
# add_executable(test_command_processor
#     test_command_processor.cpp
# )
# target_link_libraries(test_command_processor PRIVATE
#     gtest_main
#     DeviceControllerService
# )
# gtest_discover_tests(test_command_processor)
